baml_language/crates/baml_tests/snapshots/bytecode_suites/builtins.snap
---
source: crates/baml_tests/src/bytecode_snapshot.rs
---
builtin_method_call:
    baml: |

        function main() -> int {
            let arr = [1, 2, 3];
            arr.length()
        }

    bytecode: |
        function main() -> int {
            load_const 1
            load_const 2
            load_const 3
            alloc_array 3
            call baml.Array.length
            return
        }

    result: BexExternalValue::Int(3)

fetch_as:
    baml: |

        class DummyJsonTodo {
            id int
            todo string
            completed bool
            user_id int
        }

        function main() -> DummyJsonTodo {
            baml.fetch_as<DummyJsonTodo>("https://dummyjson.com/todos/1")
        }

    bytecode: |
        ERROR: compile failed for case 'fetch_as': compile_files failed: in function 'main': missing expression at file 1:122..155
        RUST_ERR_DEBUG: Err(compile failed for case 'fetch_as'

        Caused by:
            0: compile_files failed
            1: in function 'main': missing expression at file 1:122..155)

    result: |
        ERROR: compile step failed; no runtime result
        ERROR: compile failed for case 'fetch_as': compile_files failed: in function 'main': missing expression at file 1:122..155
        RUST_ERR_DEBUG: Err(compile failed for case 'fetch_as'

        Caused by:
            0: compile_files failed
            1: in function 'main': missing expression at file 1:122..155)

fetch_as_with_request_param:
    baml: |

        class DummyJsonTodo {
            id int
            todo string
            completed bool
            user_id int
        }

        function main() -> DummyJsonTodo {
            baml.fetch_as<DummyJsonTodo>(baml.HttpRequest {
                method: baml.HttpMethod.Post,
                url: "https://dummyjson.com/todos/add",
                json: {
                    "todo": "Buy milk",
                    "completed": false,
                    "userId": 5
                },
            })
        }

    bytecode: |
        ERROR: compile failed for case 'fetch_as_with_request_param': Compilation produced diagnostic errors:
          1. [E0003] Unknown variable `baml`

        RUST_ERR_DEBUG: Err(compile failed for case 'fetch_as_with_request_param'

        Caused by:
            Compilation produced diagnostic errors:
              1. [E0003] Unknown variable `baml`
            )

    result: |
        ERROR: compile step failed; no runtime result
        ERROR: compile failed for case 'fetch_as_with_request_param': Compilation produced diagnostic errors:
          1. [E0003] Unknown variable `baml`

        RUST_ERR_DEBUG: Err(compile failed for case 'fetch_as_with_request_param'

        Caused by:
            Compilation produced diagnostic errors:
              1. [E0003] Unknown variable `baml`
            )

bind_method_call:
    baml: |

        function main() -> int {
            let arr = [1, 2, 3];
            let v = arr.length();

            v
        }

    bytecode: |
        function main() -> int {
            load_const 1
            load_const 2
            load_const 3
            alloc_array 3
            call baml.Array.length
            return
        }

    result: BexExternalValue::Int(3)

any_value_to_string:
    baml: |

        class Point {
            x int
            y int
        }

        class Person {
            name string
            age int
            location Point
            hobbies string[]
            scores map<string, int>
        }

        function main() -> string {
            let p = Point { x: 10, y: 20 };
            let person = Person {
                name: "Alice",
                age: 25,
                location: p,
                hobbies: ["reading", "coding"],
                scores: {"math": 95, "english": 88}
            };

            baml.unstable.string(person)
        }

    bytecode: |
        function main() -> string {
            alloc_instance Person
            copy 0
            load_const "Alice"
            store_field .name
            copy 0
            load_const 25
            store_field .age
            copy 0
            alloc_instance Point
            copy 0
            load_const 10
            store_field .x
            copy 0
            load_const 20
            store_field .y
            store_field .location
            copy 0
            load_const "reading"
            load_const "coding"
            alloc_array 2
            store_field .hobbies
            copy 0
            load_const 95
            load_const 88
            load_const "math"
            load_const "english"
            alloc_map 2
            store_field .scores
            call baml.unstable.string
            return
        }

    result: 'BexExternalValue::String("Person {\n    name: \"Alice\"\n    age: 25\n    location: Point {\n        x: 10\n        y: 20\n    }\n    hobbies: [\"reading\", \"coding\"]\n    scores: {\n        \"math\": 95\n        \"english\": 88\n    }\n}")'
