baml_language/crates/baml_tests/snapshots/bytecode_suites/compiler_emit_builtins.snap
---
source: crates/baml_tests/src/bytecode_snapshot.rs
---
builtin_method_call:
    baml: |

        function main() -> int {
            let arr = [1, 2, 3];
            arr.length()
        }

    bytecode: |
        function main() -> int {
            load_const 1
            load_const 2
            load_const 3
            alloc_array 3
            call baml.Array.length
            return
        }

    result: BexExternalValue::Int(3)

fetch_as:
    baml: |

        class DummyJsonTodo {
            id int
            todo string
            completed bool
            user_id int
        }

        function main() -> DummyJsonTodo {
            baml.fetch_as<DummyJsonTodo>("https://dummyjson.com/todos/1")
        }

    bytecode: |
        ERROR: compile failed for case 'fetch_as': compile_files failed: in function 'main': missing expression at file 1:122..155
        RUST_ERR_DEBUG: Err(compile failed for case 'fetch_as'

        Caused by:
            0: compile_files failed
            1: in function 'main': missing expression at file 1:122..155)

    result: |
        ERROR: compile step failed; no runtime result
        ERROR: compile failed for case 'fetch_as': compile_files failed: in function 'main': missing expression at file 1:122..155
        RUST_ERR_DEBUG: Err(compile failed for case 'fetch_as'

        Caused by:
            0: compile_files failed
            1: in function 'main': missing expression at file 1:122..155)

fetch_as_with_request_param:
    baml: |

        class DummyJsonTodo {
            id int
            todo string
            completed bool
            user_id int
        }

        function main() -> DummyJsonTodo {
            baml.fetch_as<DummyJsonTodo>(baml.HttpRequest {
                method: baml.HttpMethod.Post,
                url: "https://dummyjson.com/todos/add",
                json: {
                    "todo": "Buy milk",
                    "completed": false,
                    "userId": 5
                },
            })
        }

    bytecode: |
        ERROR: compile failed for case 'fetch_as_with_request_param': Compilation produced diagnostic errors:
          1. [E0003] Unknown variable `baml`

        RUST_ERR_DEBUG: Err(compile failed for case 'fetch_as_with_request_param'

        Caused by:
            Compilation produced diagnostic errors:
              1. [E0003] Unknown variable `baml`
            )

    result: |
        ERROR: compile step failed; no runtime result
        ERROR: compile failed for case 'fetch_as_with_request_param': Compilation produced diagnostic errors:
          1. [E0003] Unknown variable `baml`

        RUST_ERR_DEBUG: Err(compile failed for case 'fetch_as_with_request_param'

        Caused by:
            Compilation produced diagnostic errors:
              1. [E0003] Unknown variable `baml`
            )
