baml_language/crates/baml_tests/snapshots/bytecode_suites/compiler_emit_classes.snap
---
source: crates/baml_tests/src/bytecode_snapshot.rs
---
class_constructor:
    baml: |

        class Point {
            x int
            y int
        }

        function main() -> Point {
            let p = Point { x: 1, y: 2 };
            p
        }

    bytecode: |
        function main() -> Point {
            alloc_instance Point
            copy 0
            load_const 1
            store_field .x
            copy 0
            load_const 2
            store_field .y
            return
        }

    result: 'BexExternalValue::Instance { class_name: "Point", fields: {"x": Int(1), "y": Int(2)} }'

class_constructor_return_directly:
    baml: |

        class Point {
            x int
            y int
        }

        function main() -> Point {
            Point { x: 1, y: 2 }
        }

    bytecode: |
        function main() -> Point {
            alloc_instance Point
            copy 0
            load_const 1
            store_field .x
            copy 0
            load_const 2
            store_field .y
            return
        }

    result: 'BexExternalValue::Instance { class_name: "Point", fields: {"x": Int(1), "y": Int(2)} }'

class_constructor_with_spread_operator:
    baml: |

        class Point {
            x int
            y int
            z int
            w int
        }

        function default_point() -> Point {
            Point { x: 0, y: 0, z: 0, w: 0 }
        }

        function main() -> Point {
            let p = Point { x: 1, y: 2, ...default_point() };
            p
        }

    bytecode: |
        function default_point() -> Point {
            alloc_instance Point
            copy 0
            load_const 0
            store_field .x
            copy 0
            load_const 0
            store_field .y
            copy 0
            load_const 0
            store_field .z
            copy 0
            load_const 0
            store_field .w
            return
        }

        function main() -> Point {
            call default_point
            store_var _2
            alloc_instance Point
            copy 0
            load_var _2
            load_field .x
            store_field .x
            copy 0
            load_var _2
            load_field .y
            store_field .y
            copy 0
            load_var _2
            load_field .z
            store_field .z
            copy 0
            load_var _2
            load_field .w
            store_field .w
            return
        }

    result: 'BexExternalValue::Instance { class_name: "Point", fields: {"x": Int(0), "y": Int(0), "z": Int(0), "w": Int(0)} }'

nested_class_construction:
    baml: |

        class Inner {
            value int
        }
        class Outer {
            Inner Inner
        }

        function main() -> int {
            let o = Outer { Inner: Inner { value: 42 } };
            42
        }

    bytecode: |
        function main() -> int {
            alloc_instance Outer
            copy 0
            alloc_instance Inner
            copy 0
            load_const 42
            store_field .value
            store_field .Inner
            store_var o
            load_const 42
            return
        }

    result: BexExternalValue::Int(42)

nested_class_with_multiple_fields:
    baml: |

        class Inner {
            x int
            y int
        }
        class Outer {
            Inner Inner
            value int
        }

        function main() -> int {
            let o = Outer {
                Inner: Inner { x: 10, y: 20 },
                value: 30
            };
            30
        }

    bytecode: |
        function main() -> int {
            alloc_instance Outer
            copy 0
            alloc_instance Inner
            copy 0
            load_const 10
            store_field .x
            copy 0
            load_const 20
            store_field .y
            store_field .Inner
            copy 0
            load_const 30
            store_field .value
            store_var o
            load_const 30
            return
        }

    result: BexExternalValue::Int(30)

nested_field_read:
    baml: |

        class Inner {
            value int
        }
        class Outer {
            Inner Inner
        }

        function main() -> int {
            let o = Outer { Inner: Inner { value: 42 } };
            o.Inner.value
        }

    bytecode: |
        function main() -> int {
            alloc_instance Outer
            copy 0
            alloc_instance Inner
            copy 0
            load_const 42
            store_field .value
            store_field .Inner
            load_field .Inner
            load_field .value
            return
        }

    result: BexExternalValue::Int(42)

field_assignment_simple:
    baml: |

        class Data {
            value int
        }

        function set_data_value(d: Data) -> int {
            d.value = 42;
            d.value
        }

    bytecode: |
        function set_data_value(d: Data) -> int {
            load_var d
            load_const 42
            store_field .value
            load_var d
            load_field .value
            return
        }

    result: |
        ERROR: execution failed for case 'field_assignment_simple': engine call_function failed for 'main': Function not found: main
        RUST_ERR_DEBUG: Err(execution failed for case 'field_assignment_simple'

        Caused by:
            0: engine call_function failed for 'main'
            1: Function not found: main)

class_constructor_with_spread_before_named_fields:
    baml: |

        class Point {
            x int
            y int
            z int
            w int
        }

        function default_point() -> Point {
            Point { x: 0, y: 0, z: 0, w: 0 }
        }

        function main() -> Point {
            let p = Point { ...default_point(), x: 1, y: 2 };
            p
        }

    bytecode: |
        function default_point() -> Point {
            alloc_instance Point
            copy 0
            load_const 0
            store_field .x
            copy 0
            load_const 0
            store_field .y
            copy 0
            load_const 0
            store_field .z
            copy 0
            load_const 0
            store_field .w
            return
        }

        function main() -> Point {
            call default_point
            store_var _2
            alloc_instance Point
            copy 0
            load_const 1
            store_field .x
            copy 0
            load_const 2
            store_field .y
            copy 0
            load_var _2
            load_field .z
            store_field .z
            copy 0
            load_var _2
            load_field .w
            store_field .w
            return
        }

    result: 'BexExternalValue::Instance { class_name: "Point", fields: {"x": Int(1), "y": Int(2), "z": Int(0), "w": Int(0)} }'

class_constructor_with_spread_after_named_fields:
    baml: |

        class Point {
            x int
            y int
            z int
            w int
        }

        function default_point() -> Point {
            Point { x: 0, y: 0, z: 0, w: 0 }
        }

        function main() -> Point {
            let p = Point { x: 1, y: 2, ...default_point() };
            p
        }

    bytecode: |
        function default_point() -> Point {
            alloc_instance Point
            copy 0
            load_const 0
            store_field .x
            copy 0
            load_const 0
            store_field .y
            copy 0
            load_const 0
            store_field .z
            copy 0
            load_const 0
            store_field .w
            return
        }

        function main() -> Point {
            call default_point
            store_var _2
            alloc_instance Point
            copy 0
            load_var _2
            load_field .x
            store_field .x
            copy 0
            load_var _2
            load_field .y
            store_field .y
            copy 0
            load_var _2
            load_field .z
            store_field .z
            copy 0
            load_var _2
            load_field .w
            store_field .w
            return
        }

    result: 'BexExternalValue::Instance { class_name: "Point", fields: {"x": Int(0), "y": Int(0), "z": Int(0), "w": Int(0)} }'

class_constructor_with_multiple_spread_operators:
    baml: |

        class Point {
            x int
            y int
            z int
            w int
        }

        function x_one() -> Point {
            Point { x: 0, y: 0, z: 0, w: 0 }
        }

        function xy_one() -> Point {
            Point { x: 1, y: 1, z: 0, w: 0 }
        }

        function xy_one_last() -> Point {
            let p = Point { ...x_one(), ...xy_one() };
            p
        }

        function x_one_last() -> Point {
            let p = Point { ...xy_one(), ...x_one() };
            p
        }

    bytecode: |
        function x_one() -> Point {
            alloc_instance Point
            copy 0
            load_const 0
            store_field .x
            copy 0
            load_const 0
            store_field .y
            copy 0
            load_const 0
            store_field .z
            copy 0
            load_const 0
            store_field .w
            return
        }

        function x_one_last() -> Point {
            call xy_one
            pop 1
            call x_one
            store_var _4
            alloc_instance Point
            copy 0
            load_var _4
            load_field .x
            store_field .x
            copy 0
            load_var _4
            load_field .y
            store_field .y
            copy 0
            load_var _4
            load_field .z
            store_field .z
            copy 0
            load_var _4
            load_field .w
            store_field .w
            return
        }

        function xy_one() -> Point {
            alloc_instance Point
            copy 0
            load_const 1
            store_field .x
            copy 0
            load_const 1
            store_field .y
            copy 0
            load_const 0
            store_field .z
            copy 0
            load_const 0
            store_field .w
            return
        }

        function xy_one_last() -> Point {
            call x_one
            pop 1
            call xy_one
            store_var _4
            alloc_instance Point
            copy 0
            load_var _4
            load_field .x
            store_field .x
            copy 0
            load_var _4
            load_field .y
            store_field .y
            copy 0
            load_var _4
            load_field .z
            store_field .z
            copy 0
            load_var _4
            load_field .w
            store_field .w
            return
        }

    result: |
        ERROR: execution failed for case 'class_constructor_with_multiple_spread_operators': engine call_function failed for 'main': Function not found: main
        RUST_ERR_DEBUG: Err(execution failed for case 'class_constructor_with_multiple_spread_operators'

        Caused by:
            0: engine call_function failed for 'main'
            1: Function not found: main)

class_constructor_with_spread_operator_does_not_break_locals:
    baml: |

        class Point {
            x int
            y int
            z int
            w int
        }

        function default_point() -> Point {
            Point { x: 0, y: 0, z: 0, w: 0 }
        }

        function main() -> int {
            let p = Point { x: 1, y: 2, ...default_point() };
            let x = 0;
            x
        }

    bytecode: |
        function default_point() -> Point {
            alloc_instance Point
            copy 0
            load_const 0
            store_field .x
            copy 0
            load_const 0
            store_field .y
            copy 0
            load_const 0
            store_field .z
            copy 0
            load_const 0
            store_field .w
            return
        }

        function main() -> int {
            call default_point
            store_var _2
            alloc_instance Point
            copy 0
            load_var _2
            load_field .x
            store_field .x
            copy 0
            load_var _2
            load_field .y
            store_field .y
            copy 0
            load_var _2
            load_field .z
            store_field .z
            copy 0
            load_var _2
            load_field .w
            store_field .w
            store_var p
            load_const 0
            return
        }

    result: BexExternalValue::Int(0)

field_assignment_compound_add:
    baml: |

        class Counter {
            value int
        }

        function increment_counter(c: Counter) -> int {
            c.value += 10;
            c.value
        }

    bytecode: |
        function increment_counter(c: Counter) -> int {
            load_var c
            load_var c
            load_field .value
            load_const 10
            bin_op +
            store_field .value
            load_var c
            load_field .value
            return
        }

    result: |
        ERROR: execution failed for case 'field_assignment_compound_add': engine call_function failed for 'main': Function not found: main
        RUST_ERR_DEBUG: Err(execution failed for case 'field_assignment_compound_add'

        Caused by:
            0: engine call_function failed for 'main'
            1: Function not found: main)

nested_object_construction:
    baml: |

        class Inner {
            x int
            y int
        }
        class Outer {
            Inner Inner
            value int
        }

        function main() -> int {
            let o = Outer {
                Inner: Inner { x: 10, y: 20 },
                value: 30
            };
            o.value
        }

    bytecode: |
        function main() -> int {
            alloc_instance Outer
            copy 0
            alloc_instance Inner
            copy 0
            load_const 10
            store_field .x
            copy 0
            load_const 20
            store_field .y
            store_field .Inner
            copy 0
            load_const 30
            store_field .value
            load_field .value
            return
        }

    result: BexExternalValue::Int(30)

nested_field_assignment:
    baml: |

        class Inner {
            value int
        }
        class Outer {
            Inner Inner
        }

        function set_nested_value(i: Inner, o: Outer) -> int {
            o.Inner.value = 99;
            o.Inner.value
        }

    bytecode: |
        function set_nested_value(i: Inner, o: Outer) -> int {
            load_var o
            load_field .Inner
            load_const 99
            store_field .value
            load_var o
            load_field .Inner
            load_field .value
            return
        }

    result: |
        ERROR: execution failed for case 'nested_field_assignment': engine call_function failed for 'main': Function not found: main
        RUST_ERR_DEBUG: Err(execution failed for case 'nested_field_assignment'

        Caused by:
            0: engine call_function failed for 'main'
            1: Function not found: main)

nested_field_assignment_compound:
    baml: |

        class Inner {
            value int
        }
        class Outer {
            Inner Inner
        }

        function increment_nested_value(o: Outer) -> int {
            o.Inner.value += 10;
            o.Inner.value
        }

    bytecode: |
        function increment_nested_value(o: Outer) -> int {
            load_var o
            load_field .Inner
            load_var o
            load_field .Inner
            load_field .value
            load_const 10
            bin_op +
            store_field .value
            load_var o
            load_field .Inner
            load_field .value
            return
        }

    result: |
        ERROR: execution failed for case 'nested_field_assignment_compound': engine call_function failed for 'main': Function not found: main
        RUST_ERR_DEBUG: Err(execution failed for case 'nested_field_assignment_compound'

        Caused by:
            0: engine call_function failed for 'main'
            1: Function not found: main)
