baml_language/crates/baml_tests/snapshots/bytecode_suites/compiler_emit_enums.snap
---
source: crates/baml_tests/src/bytecode_snapshot.rs
---
return_enum_variant:
    baml: |

        enum shape {
            square
            rectangle
            circle
        }

        function main() -> shape {
            shape.rectangle
        }

    bytecode: |
        function main() -> shape {
            load_const 1 /* shape.rectangle */
            alloc_variant shape
            return
        }

    result: 'BexExternalValue::Variant { enum_name: "shape", variant_name: "rectangle" }'

assign_enum_variant:
    baml: |

        enum shape {
            square
            rectangle
            circle
        }

        function main() -> shape {
            let s = shape.rectangle;
            s
        }

    bytecode: |
        function main() -> shape {
            load_const 1 /* shape.rectangle */
            alloc_variant shape
            return
        }

    result: 'BexExternalValue::Variant { enum_name: "shape", variant_name: "rectangle" }'
